遷移用ページ作成

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
     <head></head>
     <body>
         <h1>Hello World</h1>
+        <a href="https://ekusy.github.io/ProtoWalka/Pages/hoge.html">hoge.html</a>
     </body>
 </html>
