リンクを相対パスに変更

--- a/Pages/hoge.html
+++ b/Pages/hoge.html
@@ -2,6 +2,6 @@
     <head></head>
     <body>
         <h1>hogehoge</h1>
-        <a href="https://ekusy.github.io/ProtoWalka/index.html">index.html</a>
+        <a href="../index.html">index.html</a>
     </body>
 </html>
